# CMake

./: .gitignore
Task_1_Simple_project/: CMakeLists.txt  Task_1_Simple_project.cpp  Task_1_Simple_project.sln  Task_1_Simple_project.vcxproj  Task_1_Simple_project.vcxproj.filters
Task_2_The_project_is_more_complicated/: CMakeLists.txt  Task_2_The_project_is_more_complicated.cpp  Task_2_The_project_is_more_complicated.sln  Task_2_The_project_is_more_complicated.vcxproj  Task_2_The_project_is_more_complicated.vcxproj.filters
